# home

./: Cargo.toml  configuration.yaml  spec.yaml  sqlite.bak_db  sqlite.db  sqlx-data.json
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml
docker/: Dockerfile  Dockerfile_old  build.sh  run.sh
migrations/: 20230409213833_create_subscriptions_table.sql  20230708135308_example_data.sql  20230708150903_create_events.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
