[package]
name = "home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "home"

[dependencies]
actix-web = "4"
serde = { version = "1.0.159", features = ["derive"] }
# sqlx = { version = "0.6.3", features=["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.3.1", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features=["serde"] }
tracing-actix-web = "0.7.5"
serde_json = "1.0.100"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    # "uuid",
    "chrono",
    "migrate",
    "offline"
]


[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dev-dependencies]
once_cell = "1.17.1"
reqwest = "0.11.16"
